Use valueOf for constructing boxed Java primitives during arg conversion.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@7256 961051c9-f516-0410-bf72-c9f7e237a7b7